// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowBtn snapshots should render with default html 1`] = `
<button
  class="arrow-btn"
>
  <span />
</button>
`;

exports[`ArrowBtn snapshots should render with nav-arrow-btn class 1`] = `
<button
  class="arrow-btn nav-arrow-btn"
>
  <span />
</button>
`;
